--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,9 +1,9 @@
 on:
   pull_request:
     branches:
-      - master
+      - main
 
-name: master
+name: main
 jobs:
   pytest:
     runs-on: ubuntu-latest
