--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -45,7 +45,7 @@ jobs:
         if: ${{ matrix.python-version == 3.8 }}
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.TOKEN_CICD }}
+          github_token: ${{ secrets.ORG_TOKEN_CICD }}
           branch: main
           force: true
 
@@ -63,7 +63,7 @@ jobs:
         if: ${{ matrix.python-version == 3.8 }}
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.TOKEN_CICD }}
+          github_token: ${{ secrets.ORG_TOKEN_CICD }}
           branch: "gh-pages"
           force: true
 
