--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,6 +32,7 @@ jobs:
       - name: build
         run: |
           python setup.py install
+          python setup.py sdist
 
       - name: commit version
         continue-on-error: True
