new: usr: CI/CD

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -48,7 +48,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.ORG_TOKEN_CICD }}
-          branch: "main"
+          branch: ${{ env.BRANCH_NAME }}
           force: true
 
       - name: make doc
