--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           make install
+          pip install pandas
           python setup.py sdist
 
       - name: commit version
