--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,17 +10,14 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'VERSION-SKIP-CI')"
     strategy:
       matrix:
-        python-version: [ 3.8 ]
+        python-version: [ 3.9 ]
     steps:
 
-      # extract branch name
-      - name: Extract branch name
+      # extract repo name
+      - name: Extract repo name
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-        if: github.event_name != 'pull_request'
-        run: |
-          echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/})"
-          echo "branch name: $BRANCH_NAME"
+        run: echo "::set-env name=REPO_NAME::$(echo ${{ github.repository }} | sed "s/${{ github.repository_owner }}\///g")"
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -34,30 +31,29 @@ jobs:
 
       - name: build
         run: |
-          python -m pip install --upgrade pip
-          make install
-          pip install pandas
+          pip install .
           python setup.py sdist
 
       - name: commit version
-        continue-on-error: True
         run: |
-          git add VERSION.txt
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add .
           git commit -m "VERSION-SKIP-CI"
 
       - name: Push version
-        if: ${{ matrix.python-version == 3.8 }}
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.ORG_TOKEN_CICD }}
-          branch: ${{ env.BRANCH_NAME }}
+          branch: main
           force: true
 
       - name: make doc
-        run: make doc
+        run: |
+          pip install pdoc3
+          pdoc --html ruleskit -o docs
+          mv docs/ruleskit/* docs/
+          rm -r docs/ruleskit
 
       - name: commit doc
         run: |
@@ -67,7 +63,6 @@ jobs:
           git commit -m "docs"
 
       - name: Push doc
-        if: ${{ matrix.python-version == 3.8 }}
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.ORG_TOKEN_CICD }}
@@ -75,7 +70,6 @@ jobs:
           force: true
 
       - name: topypi
-        if: ${{ matrix.python-version == 3.8 }}
         uses: pypa/gh-action-pypi-publish@master
         with:
           user: ${{ secrets.ORG_PYPI_LOGIN }}
