--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -29,6 +29,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install wheel
           pip install pytest
+          # Required for pytests
+          pip install pandas
           pip install pytest-gitignore
           pip install pytest-github-actions-annotate-failures
           pip install .
